feat: add mispi_lab-4

--- a/Year-2/Methods-and-means-of-software-engineering/lab-4/src/main/webapp/view/main.xhtml
+++ b/Year-2/Methods-and-means-of-software-engineering/lab-4/src/main/webapp/view/main.xhtml
@@ -13,6 +13,7 @@
             <div class="interactive">
                 <ui:include src="page/main/graph.xhtml"/>
                 <ui:include src="page/main/form.xhtml"/>
+                <ui:include src="page/main/data.xhtml"/>
                 <ui:include src="page/main/table.xhtml"/>
             </div>
         </ui:define>
