--- a/Year-2/Methods-and-means-of-software-engineering/lab-4/src/main/webapp/view/page/main/form.xhtml
+++ b/Year-2/Methods-and-means-of-software-engineering/lab-4/src/main/webapp/view/page/main/form.xhtml
@@ -38,7 +38,7 @@
             </div>
             <div class="form-radius">
                 <div class="form-radius__wrapper">
-                    <h:outputLabel class="form-radius__label" value="Enter radius:">
+                    <h:outputLabel class="form-radius__label" value="Enter radius:" onclick="">
                         <p:spinner class="form-radius__input" value="#{formView.inputR}" widgetVar="wvr" min="0.1"
                                    max="3" stepFactor="0.1"/>
                     </h:outputLabel>
@@ -51,7 +51,7 @@
                                      value="Submit" type="submit"
                                      styleClass="form-userbuttons__submit">
                         <f:ajax execute="@form"
-                                render="datatable"
+                                render="datatable data-container"
                                 onevent="(data) => { if (data.status === 'success') {
                                     deletePoints();
                                     loadPointsFromTable();
@@ -60,7 +60,7 @@
                     <h:commandButton action="#{inputController.clearTable}" value="Clean" type="submit"
                                      styleClass="form-userbuttons__clean">
                         <f:ajax execute="@form"
-                                render="datatable"
+                                render="datatable data-container"
                                 onevent="(data) => { if (data.status === 'success') {
                                     deletePoints();
                                     loadPointsFromTable();
@@ -70,11 +70,16 @@
                                      value="SubmitSvg"
                                      style="display: none" type="submit">
                         <f:ajax execute="@form"
-                                render="datatable"
+                                render="datatable data-container"
                                 onevent="(data) => { if (data.status === 'success') {
                                     deletePoints();
                                     loadPointsFromTable();
                                 }}"/>
+                    </h:commandButton>
+                    <h:commandButton styleClass="data-update__button"
+                                     value="UpdateData"
+                                     style="display: none" type="submit">
+                        <f:ajax execute="@form" render="data-container"/>
                     </h:commandButton>
                 </div>
             </div>
